[package]
authors = ["Andrey Kartashov <andrey.kartashov@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "power_supply_ieee488_gpib_controller"
version = "0.1.0"

[dependencies]
# can print panic messages but larger
#panic-semihosting = "0.5.3"
panic-halt = "0.2.0"

cortex-m = "0.6.4"
cortex-m-rt = "0.6.13"
cortex-m-semihosting = "0.3.7"
cortex-m-rtic = "0.5.5"

embedded-hal = "0.2.4"

usb-device = "0.2.7"
usbd-serial =  { git = "https://github.com/mvirkkunen/usbd-serial", rev="f6e7834a470246c191a6f027252816710b23deb8" }

embedded-graphics = "0.6.2"
st7920 = "0.2.2"

embedded-sdmmc = { git = "https://github.com/andreyk0/embedded-sdmmc-rs", branch="develop" }
#embedded-sdmmc = { path = "../embedded-sdmmc-rs" }

heapless = "0.6.0"


[dependencies.stm32f1]
version = "0.12.1"
features = ["stm32f103", "rt"]

[dependencies.stm32f1xx-hal]
version = "0.7.0"
features = ["rt", "stm32f103", "medium", "stm32-usbd"]

[profile.dev]
codegen-units = 1 # better optimizations

# optimize for size ('s' or 'z' would optimize even more)
opt-level = 'z'

# enable debugging in dev mode.
debug = true

# link with link time optimization (lto).
# NOTE: setting this to true upsets GDB, there's a bug somewhere
lto = true

[profile.release]

codegen-units = 1 # better optimizations

# optimize for size ('s' or 'z' would optimize even more)
opt-level = 's'

# link with link time optimization (lto).
lto = true

# no debug info
debug = false

# Optimize all the other dependencies
[profile.dev.package."*"]
opt-level = "s"
debug = false

[profile.release.package."*"]
opt-level = "s"
