[package]
authors = ["Andrey Kartashov <andrey.kartashov@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "power_supply_ieee488_gpib_controller"
version = "0.1.0"

[features]
# enable debug/info actions (e.g. print to gdb host), larger size
default = [
  #"sdc_info",
  #"sdc_debug",
  #"bin_debug",
  #"bin_info",
  #"render_debug",
  #"uart_debug",
  #"usb_debug",
]
# SDC host info messages
sdc_info = []
# SDC host debug messages
sdc_debug = []

# UART serial debug
uart_debug = []

# USB debug
usb_debug = []

# main binary info messages
bin_info = []

# main binary debug messages
bin_debug = []

# introduce rendering delay for debugging
render_debug = []

[dependencies]
# can print panic messages but larger
panic-semihosting = "0.5.6"
#panic-halt = "0.2.0"

cortex-m = "0.7.1"
cortex-m-rt = "0.6.13"
cortex-m-semihosting = "0.3.7"
cortex-m-rtic = "0.5.6"

embedded-hal = "0.2.4"

usb-device = "0.2.7"
usbd-serial =  { git = "https://github.com/mvirkkunen/usbd-serial", rev="f6e7834a470246c191a6f027252816710b23deb8" }

embedded-graphics = "0.6.2"
st7920 = "0.2.2"

#embedded-sdmmc = { git = "https://github.com/andreyk0/embedded-sdmmc-rs", branch="develop" }
embedded-sdmmc = { path = "../embedded-sdmmc-rs" }

heapless = "0.6.1"

nb = "1.0.0"

[dependencies.num-traits]
version = "0.2.14"
default-features = false

[dependencies.stm32f4]
version = "0.13.0"
features = ["stm32f411", "rt"]

[dependencies.stm32f4xx-hal]
version = "0.8.3"
features = ["rt", "stm32f411", "usb_fs"]

[profile.dev]
codegen-units = 1 # better optimizations

# optimize for size ('s' or 'z' would optimize even more)
opt-level = 'z'

# enable debugging in dev mode.
debug = true

# link with link time optimization (lto).
# NOTE: setting this to true upsets GDB, there's a linker bug somewhere
#       that still lists sections that were inlined and removed
lto = false

[profile.release]

codegen-units = 1 # better optimizations

# optimize for size ('s' or 'z' would optimize even more)
opt-level = 's'

# link with link time optimization (lto).
# TODO: try to enable again, got into trouble with inlining
lto = false

# no debug info
debug = false

# Optimize all the other dependencies
[profile.dev.package."*"]
opt-level = "z"

[profile.release.package."*"]
opt-level = "s"
